Fix vertical alignment of lines and headers

--- a/resources/public/styles/730up.css
+++ b/resources/public/styles/730up.css
@@ -8,6 +8,7 @@ h3 {font-size: 25px;}
 
 .illustration, .mod, h1, h3, h4, h5, p, ul, ol, hr, .img, pre {margin: 20px;}
 h2 {margin: 60px 0 20px; padding: 5px 20px;}
+hr {margin-left: 0; margin-right: 0;}
 ul {margin-left: 45px;}
 ol {margin-left: 40px;}
 .grid {margin: 20px 0 0 20px;}
