--- a/resources/public/styles/960up.css
+++ b/resources/public/styles/960up.css
@@ -8,3 +8,8 @@ body {font-size: 18px;}
 .ginormous-2 {font-size: 190px;}
 .ginormous-3 {font-size: 170px;}
 .ginormous-4 {font-size: 110px;}
+
+h2,
+hr {margin-left: 20px; margin-right: 20px;}
+
+h2.offset span.offset-content {display: block; margin: 0;}
