--- a/resources/public/styles/base.css
+++ b/resources/public/styles/base.css
@@ -30,6 +30,7 @@ h3.obstacle {color: #a0a0a0; font-size: 60px; line-height: 1.0; margin-bottom: 4
 #header {background: #000; position: relative;}
 
 .illustration, .mod, h1, h3, h4, h5, p, ul, ol, hr, .img {margin: 10px;}
+hr {margin-left: 0; margin-right: 0;}
 h2 {margin: 30px 0 10px; padding: 5px 10px; line-height: 1.2em;}
 h1 {line-height: 1.1em;}
 h3 {line-height: 1.3em;}
